NetBSD Problem Report #40428

From yamt@mwd.biglobe.ne.jp  Sun Jan 18 11:31:06 2009
Return-Path: <yamt@mwd.biglobe.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 551FB63BA90
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 18 Jan 2009 11:31:06 +0000 (UTC)
Message-Id: <20090118113101.C644311702@yamt.dyndns.org>
Date: Sun, 18 Jan 2009 20:31:01 +0900 (JST)
From: yamt@mwd.biglobe.ne.jp
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: ppp vs module_lock
X-Send-Pr-Version: 3.95

>Number:         40428
>Category:       kern
>Synopsis:       ppp vs module_lock
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 18 11:35:00 +0000 2009
>Closed-Date:    Mon Jan 19 15:18:39 +0000 2009
>Last-Modified:  Mon Jan 19 15:20:02 +0000 2009
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 5.99.7
>Organization:

>Environment:

Architecture: i386
Machine: i386
>Description:
	while module_autoload() expects to be called with module_lock held,
	ppp_get_compressor() calls it without the lock held.
>How-To-Repeat:
>Fix:


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: yamt@NetBSD.org
State-Changed-When: Mon, 19 Jan 2009 15:18:39 +0000
State-Changed-Why:
fixed.


From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40428 CVS commit: src/sys/net
Date: Mon, 19 Jan 2009 15:16:34 +0000 (UTC)

 Module Name:	src
 Committed By:	yamt
 Date:		Mon Jan 19 15:16:34 UTC 2009

 Modified Files:
 	src/sys/net: if_ppp.c

 Log Message:
 ppp_get_compressor: take module_lock when trying to load a module.  PR/40428


 To generate a diff of this commit:
 cvs rdiff -r1.127 -r1.128 src/sys/net/if_ppp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.