ppp_get_compressor: take module_lock when trying to load a module.  PR/40428